Fixed: edit metadata of folders.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -845,3 +845,9 @@ relationType.cloneOnLeftCopy=Copy relation if left object is copied
 relationType.cloneOnRightCopy=Copy relation if right object is copied
 user.not.found=The requested user account was not found in the database.
 error.xml.config=The config parameter has to be well-formed XML.
+
+#####################################################################
+### Cinnamon 3 messages
+#####################################################################	
+error.unknown.metasetType=The specified type of metaset was not found in the repository.
+alt.exclamation=Exclamation mark icon as symbol for error messages.
