--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -851,3 +851,4 @@ error.xml.config=The config parameter has to be well-formed XML.
 #####################################################################	
 error.unknown.metasetType=The specified type of metaset was not found in the repository.
 alt.exclamation=Exclamation mark icon as symbol for error messages.
+error.image.not.found=The image you requested was not found.
