--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -853,3 +853,4 @@ error.unknown.metasetType=The specified type of metaset was not found in the rep
 alt.exclamation=Exclamation mark icon as symbol for error messages.
 error.image.not.found=The image you requested was not found.
 iterate.fail=Failed to iterate over the selected item(s). Error: {0}
+zip.folder.fail=The target folder could not be zipped because of: {0}
