Add admin index page
 (todo: migrate missing v2 Dandelion controllers and views to v2)

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -855,3 +855,7 @@ error.image.not.found=The image you requested was not found.
 iterate.fail=Failed to iterate over the selected item(s). Error: {0}
 zip.folder.fail=The target folder could not be zipped because of: {0}
 alt.logo=logo image of this repository
+link.to.administration=Administration
+admin.title=Cinnamon Administration
+index.manage.lifecycleLog=Lifecycle Log
+admin.server.objects=Manage server objects
