--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -859,3 +859,5 @@ link.to.administration=Administration
 admin.title=Cinnamon Administration
 index.manage.lifecycleLog=Lifecycle Log
 admin.server.objects=Manage server objects
+format.still.used=This format is still in use.
+format.update.failed=Update of format failed.
