Start German i18n, fix some message-ids.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -90,7 +90,6 @@ osd.setContent=upload file
 osd.setContent.cancel=cancel upload - return to folder view
 osd.getContent.link=download content
 error.no.content=Error: this object has no content.
-osd.no.format.renderer=There is no renderer available for contenttype {0}.
 error.loading.folders=Error: could not load folders.. Please try to login again.<br>Original error message was:<br> {0}.
 app.illicium=Illicium
 
@@ -115,7 +114,6 @@ search.label=search
 error.delete.folder=Could not delete folder because of: {0}
 folder.delete.submit=delete folder ''{0}''
 folder.delete.confirm=Do you really want to delete the folder "{0}"?
-folder.delete.success=The folder "{0}" has been deleted.
 error.folder.has_content=The folder still has content and cannot be deleted.
 error.folder.exists=A folder by that name already exists.
 error.subfolders.exist=This folder is not empty - it cannot be deleted as long as it contains sub folders.
@@ -331,9 +329,9 @@ format.extension=Extension
 format.edit.title=Edit Format
 format.list=List Formats
 format.list.title=Format List
-format.id=ID
+format.id=Id
 format.show.title=Show Format
-format.updated.failed=Failed to save format.
+format.update.failed=Failed to save format.
 format.empty.name=Please provide a valid name.
 
 aclEntry.list.title=AclEntries
@@ -517,7 +515,6 @@ link.close=[X]
 link.edit.folder.name.title=Change the name of this folder
 link.edit.folder.owner.title=Change the owner of this folder
 link.edit.folder.acl.title=Change the acl of this folder
-link.edit.folder.type.title=Change the folder''s type.
 data.save=save
 error.set.ownerid=Failed to change owner.
 error.set.aclId=Failed to change ACL.
@@ -860,4 +857,4 @@ admin.title=Cinnamon Administration
 index.manage.lifecycleLog=Lifecycle Log
 admin.server.objects=Manage server objects
 format.still.used=This format is still in use.
-format.update.failed=Update of format failed.
+class.not.found=The class {0} was not found.
