--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -53,3 +53,208 @@ typeMismatch.java.lang.Long=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.lang.Short=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigDecimal=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl sein
+
+link.edit.acl.title=ACL ändern
+home=Start
+class.not.found=Die Klassendatei {0} wurde nicht gefunden.
+edit=Bearbeiten
+delete=Löschen
+create=Anlegen
+update=Aktualisieren
+_everybody.description=Jeder
+_owner.description=Eigentümer
+error.account.inactive=Das Benutzerkonto ist deaktiviert. 
+backup.success=Backupdatei wurde angelegt als "{0}"
+backup.restore.success=Backup wurde erfolgreich eingespielt.
+error.delete.acl.aclentry=Die ACL kann nicht gelöscht werden, sie wird noch von einer oder mehr Gruppen verwendet.
+error.delete.group=Die Gruppe kann nicht gelöscht werden, sie wird noch von mindestens einer ACL verwendet.
+error.delete.objectType=Der Objekt-Typ kann nicht gelöscht werden, da er noch von mindestens einem Objekt verwendet wird.
+error.delete.format=Das Format kann nicht gelöscht werden, weil es noch von mindestens einem Objekt benötigt wird.
+error.delete.default.acl=Die Standard-ACL darf nicht gelöscht werden, sie wird vom System benötigt.
+error.delete.default.objectType=Der Standard-Objekt-Typ {0} darf nicht gelöscht werden, er wird vom System benötigt.
+error.default.acl=Die Standard-ACL fehlt. Ohne die geht gar nichts.
+error.default.objectType=Der Objekt-Typ "{0}" fehlt - er wird zwingend als Standard-Vorgabe benötigt.
+error.create.indexType.empty.name=Der Name ist ungültig.
+error.create.indexType.empty.indexerClass=Die Indexer-Klasse ist leer.
+error.create.indexType.empty.vaProviderClass=Die Klasse zur Erstellung von Auswahllisten-Einträgen ist leer.
+error.create.duplicate.name=Ein Objekt-Typ "{0}" mit dem Feld "{1}" und Wert "{2}" existiert bereits.
+error.create.empty.name=Das Namensfeld ist leer.
+acl.delete.success=ACL {0} wurde gelöscht.
+format.delete.success=Format {0} wurde gelöscht.
+error.osd.not.found=Das Objekt wurde nicht in der Datenbank gefunden. 
+error.create.folder=Ordner konnte nicht angelegt werden. Fehlermeldung\: {0}
+enable.javascript=Bitte aktivieren Sie JavaScript in Ihrem Browser.
+error.access.denied=Zugriff verweigert.
+error.access.failed=Der Zugriff auf diese Ressource ist fehlgeschlagen. Das kann ein zeitweiliges oder \
+ andauerndes Problem sein, im letzteren Fall wenden Sie sich bitte an Ihren Administrator.
+folder.owner=Eigentümer
+folder.open.view=Unterordner laden
+folder.no.objects=Dieser Ordner enthält keine Objekte.
+folder.no.children=Dieser Ordner enthält keine Unterordner.
+folder.name=Name
+folder.info.title=Mehr Informationen über diesen Ordner anzeigen.
+folder.index=Repository ansehen
+folder.id=Id
+folder.do.filter=Versionen filtern
+folder.acl=ACL
+folder.close.view=Unterordner-Ansicht schließen
+file.upload=Hochzuladene Datei
+errors.login.passwordExpired=Ihr Passwort ist leider abgelaufen
+errors.login.locked=Ihr Benutzerkonto ist leider gesperrt.
+errors.login.fail=Zu dieser Kombination aus Namen und Passwort gibt es kein Benutzerkonto
+errors.login.expired=Ihr Benutzerkonto ist leider abgelaufen.
+errors.login.disabled=Ihr Benutzerkonto wurde deaktiviert.
+error.xml.config=Der Konfigurations-Parameter muß zumindest wohlgeformtes XML sein.
+error.wrong.format=Falsches Format.
+error.upload.fail=Das Hochladen der Daten ist fehlgeschlagen. Bitte stellen sie sicher, daß die Datei auf Ihrem System\
+existiert und nicht leer ist.
+error.unlock.failed=Das Objekt konnte nicht entsperrt werden.
+error.unknown.metasetType=Diesen Metaset-Typ gibt es nicht im Repository.
+error.system.failure=Systemfehler
+error.subfolders.exist=Dieser Ordner kann erst gelöscht werden, wenn er keine Unterordner mehr hat 
+error.set.ownerid=Der Eigentümer dieses Objektes konnte nicht geändert werden.
+error.set.name=Der Name dieses Objektes konnte nicht geändert werden.
+folder.version.all=alle Versionen
+folder.version.branch=Zeige neueste Versionen in Zweigen
+folder.version.head=neueste Version im Stamm
+folder.zipFolder.link=Ordner zippen
+folderType.confirm.delete=Wollen Sie diesen Ordner-Typ wirklich löschen?
+folderType.create=anlegen
+folderType.create.link=Ordner-Typ anlegen
+folderType.create.title=Ordner-Typ anlegen
+folderType.delete.fail=Der Ordner-Typ konnte nicht gelöscht werden. Ist wahrscheinlich noch in Gebrauch. Fehlermeldung\: ''{0}''
+folderType.delete.success=Der Ordner-Typ ''{0}'' wurde erfolgreich gelöscht.
+folderType.description=Beschreibung
+folderType.edit.title=Ordner bearbeiten
+folderType.id=Id
+folderType.list.link=Liste der Ordner-Typen
+folderType.list.title=Liste der Ordner-Typen
+folderType.name=Name
+folderType.show.title=Ordner-Typ anzeigen
+format.contenttype=Inhalts-Typ
+format.create=Neues Format
+format.create.title=Neues Format
+format.description=Beschreibung
+format.edit.title=Format bearbeiten
+format.empty.name=Bitte wählen Sie einen Namen für das Format.
+format.extension=Erweiterung / Dateiendung
+format.id=Id
+format.list=Liste der Formate
+format.list.title=Liste der Formate
+format.name=Name
+format.show.title=Format anzeigen
+format.still.used=Dieses Format wird noch gebraucht.
+format.update.failed=Das Format konnte nicht aktualisiert werden.
+folder.content.folders=Ordner
+folder.content.objects=Objekte
+folder.custom.metadata=Weitere Metadaten
+folder.delete.confirm=Wollen Sie den Ordner ''{0}'' wirklich löschen?
+folder.delete.fail=Der Ordner \#{0} konnte nicht gelöscht werden. Ursache\: {1}
+folder.delete.ok=Der Ordner \#{0} wurde gelöscht.
+folder.delete.submit=Ordner ''{0}'' löschen
+osd.acl=ACL
+osd.content.h=Inhalt
+osd.create.version=[versionieren]
+osd.created=Erstellt am
+osd.delete=löschen
+osd.delete.all.fail=Löschen von \#{0} (alle Versionen) schlug fehl. Ursache\: {1} 
+osd.delete.all.ok=Löschen von \#{0} (alle Versionen) war erfolgreich.
+osd.delete.all.versions=Alle Versionen löschen
+osd.delete.fail=Löschen von \#{0} schlug fehl. Ursache\: {1}
+osd.delete.ok=\#{0} wurde erfolgreich gelöscht.
+osd.format=Format
+osd.getContent.link=Inhalt herunterladen
+osd.h=Objekt \#{0}\: "{1}"
+osd.id=Id
+osd.is.latestBranch=Dies ist die neueste Version in diesem Zweig.
+osd.is.latestHead=Dies ist die neueste Version im Stamm.
+osd.is.locked=Das Objekt {0} wurde gesperrt.
+osd.is.unlocked=Das Objekt {0} wurde entsperrt.
+osd.language=Sprache
+osd.locked.by.user=Das Objekt ist gesperrt von {0}.
+osd.locked.by.you=Das Objekt wurde von Ihnen gesperrt.
+osd.locked.not=Das Objekt ist nicht gesperrt. Klicken, um zu sperren.
+osd.lockedBy=Gesperrt von
+osd.metadata=Weitere Metadaten
+osd.modified=Zuletzt geändert
+osd.name=Name
+osd.no.content=(kein Inhalt vorhanden)
+osd.no.format.renderer=Für diesen Inhaltstyp ist kein Anzeigemodul vorhanden.
+osd.no.metadata=(keine Metadaten verfügbar)
+osd.no.name=(kein Name)
+osd.no.relations=Dieses Objekt hat keine Beziehungen.
+osd.no.renderer=Es tut uns leid, für diesen Inhaltstyp gibt es keinen Renderer.
+osd.not.latestBranch=Es gibt ein neueres Objekt als dieses auf diesem Zweig.
+osd.not.latestHead=Es gibt ein neueres Objekt als dieses im Stamm.
+osd.owner=Eigentümer
+osd.relation.incoming=eingehende Beziehungen
+osd.relation.outward=ausgehende Beziehungen
+osd.relation.name=Objekt
+osd.relation.object_type=Objekt-Typ
+osd.relation.type=Typ
+osd.relation.version=Version
+osd.relations=Beziehungen
+osd.relations.link=Beziehungen anzeigen
+osd.select=auswählen
+osd.setContent=Datei hochladen
+osd.setContent.cancel=Hochladen abbrechen - zurück zur Übersicht
+osd.setContent.head=Inhalt hochladen für Objekt \#{0} - ''{1}''
+osd.setContent.link=Inhalt hochladen
+osd.size=Größe
+osd.system.meta.h=System-Metadaten
+osd.type=Typ
+osd.version=Version
+osd.version.number=Version \#
+osd.version.status=Versions-Status
+permission.activated=aktiv
+permission.description=Beschreibung
+permission.name=Name
+relation.metadata=Metadaten
+relationResolver.config=Konfiguration
+save.changes=Änderungen speichern
+search.label=suchen
+search.no.folders=Die Suche hat keine Ordner gefunden.
+search.no.objects=Die Suche hat keine Objekte gefunden.
+search.placeholder=Ordner und Objekte suchen
+search.results=Suchergebnisse
+search.results.folders=Ordner
+search.results.objects=Objekte
+search.submit=suchen
+select.all=alle auswählen
+select.deselect.all.folders=alle Ordner abwählen
+select.deselect.all.objects=alle Objekte abwählen
+select.folders=Ausgewählte Ordner
+select.objects=Ausgewählte Objekte
+selection.h=Auswahlliste
+server.configuration=Servereinstellungen
+server.i18n=Internationalisierung
+server.indexing=Indizierung und Suche
+server.objects=Objekte und Typen
+server.rights=Zugriff und Berechtigungen
+server.workflow_lifecycle=Prozesse (Workflows) und Lebenszyklen
+system.message=Fehlermeldung
+table.hide=Diese Tabelle ausblenden
+zip.folder.fail=Der Zielordner konnte nicht gezippt werden. Ursache\: {0}
+link.edit=[E]
+link.close=[X]
+link.create.folder=Ordner anlegen in ''{0}''
+link.create.object=Objekt anlegen in ''{0}''
+link.edit.folder.name.title=Namen des Ordners ändern
+link.edit.folder.owner.title=Eigentümer des Ordners ändern
+link.edit.folderType.title=Typ des Ordners ändern
+folder.select=auswählen
+folder.type=Typ
+folder.render.preview=Vorschau des Inhalts
+folder.render.metadata=Metadaten zeigen
+error.locked.foreign=Sie dürfen die Sperre eines anderen Benutzers nicht aufheben.
+error.message.import.language=Import fehlgeschlagen - konnte die Zielsprache nicht bestimmen.
+error.missing.content=Fehler\: der Server hat keine Daten erhalten.
+error.missing.folder=Bitte wählen Sie einen existierenden Ordner.
+error.missing.format=Bitte wählen Sie ein Format für dieses Objekt. Objekte mit Inhalt müssen ein Format haben.
+error.missing.name=Bitte wählen Sie einen Namen für das Objekt. 
+error.missing.objectType=Bitte geben Sie den Inhalts-Typ an.
+error.name.not.unique=Bitte wählen Sie einen anderen Namen, dieser wird schon benutzt.
+error.no.content=Fehler\: dieses Objekt hat keinen Inhalt
+error.no.rootFolder=Konnte den Wurzelordner nicht finden.
+error.object.in.use=Dieses Objekt kann nicht gelöscht werden, weil es noch irgendwo benutzt wird (vielleicht existieren noch Beziehungen zu anderen Objekten).
+error.object.already.exits=Ein ähnliches Objekt existiert bereits.
