--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -207,9 +207,9 @@ format.extension=Extension
 format.edit.title=\u00c9diter le format
 format.list=Lister les formats
 format.list.title=Liste des formats
-format.id=ID
+format.id=Id
 format.show.title=Afficher le format
-format.updated.failed=\u00c9chec de l'enregistrement du format.
+format.update.failed=\u00c9chec de l'enregistrement du format.
 format.empty.name=Veuillez indiquer un nom valide.
 
 aclEntry.list.title=Entr\u00e9es ACL (Liste de Contr\u00f4le d'Acc\u00e8s)
@@ -310,7 +310,7 @@ osd.name=Nom
 osd.format=Format
 osd.type=Type
 osd.owner=Propri\u00e9taire
-osd.id=ID
+osd.id=Id
 osd.version=Version
 osd.lockedBy=V\u00e9rrouill\u00e9 par
 osd.size=Taille
@@ -375,7 +375,7 @@ icon.info.link=Informations sur cet \u00e9l\u00e9ment
 folder.name=Nom
 folder.owner=Propri\u00e9taire
 folder.acl=ACL
-folder.id=ID
+folder.id=Id
 folder.type=Type
 folder.info.title=Afficher plus d'informations sur ce dossier.
 folder.close.view=Masquer l'affichage du dossier enfant
@@ -390,7 +390,6 @@ link.close=[X]
 link.edit.folder.name.title=Changer le nom de ce dossier
 link.edit.folder.owner.title=Changer le propri\u00e9taire de ce dossier
 link.edit.folder.acl.title=Changer l'ACL de ce dossier
-link.edit.folder.type.title=Changer le type de dossier
 data.save=enregistrer
 error.set.ownerid=Le changement du propri\u00e9taire a \u00e9chou\u00e9.
 error.set.aclId=Le changement de l'ACL a \u00e9chou\u00e9.
@@ -410,7 +409,7 @@ folderType.list.title=Liste des types de dossier
 folderType.confirm.delete=Voulez-vous vraiment supprimer ce type de dossier ?
 relationType.confirm.delete=Voulez-vous vraiment supprimer ce type de relation ?
 folderType.delete.fail=La suppression de ce type de dossier a \u00e9chou\u00e9. Il est probablement encore utilis\u00e9. Message d'erreur initial : ''{0}''
-folderType.id=ID
+folderType.id=Id
 
 uiLanguage.update.success=Mise \u00e0 jour r\u00e9ussie de la langue "{0}"
 uiLanguage.update.fail=\u00c9chec de la mise \u00e0 jour de la langue :<br/> {0}
@@ -697,3 +696,4 @@ message.export.targetLanguage=Langue cible
 html.hide.area=masquer
 message.export.xml=Exporter en tant que format XML brut
 message.export.xliff=Exporter en tant que format XLIFF
+link.edit.folderType.title=Changer le type de dossier
