Add ChangeTriggers from Dandelion.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -858,3 +858,5 @@ index.manage.lifecycleLog=Lifecycle Log
 admin.server.objects=Manage server objects
 format.still.used=This format is still in use.
 class.not.found=The class {0} was not found.
+changeTrigger.action=Action
+changeTrigger.controller=Controller
