Add ChangeTrigger views from Dandelion.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -860,3 +860,5 @@ format.still.used=This format is still in use.
 class.not.found=The class {0} was not found.
 changeTrigger.action=Action
 changeTrigger.controller=Controller
+save=save
+cancel=cancel
