Add error messages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -862,3 +862,4 @@ changeTrigger.action=Action
 changeTrigger.controller=Controller
 save=save
 cancel=cancel
+error.protected_relations=This object is related to another object via a protected relation.
