--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -258,3 +258,5 @@ error.no.content=Fehler\: dieses Objekt hat keinen Inhalt
 error.no.rootFolder=Konnte den Wurzelordner nicht finden.
 error.object.in.use=Dieses Objekt kann nicht gelöscht werden, weil es noch irgendwo benutzt wird (vielleicht existieren noch Beziehungen zu anderen Objekten).
 error.object.already.exits=Ein ähnliches Objekt existiert bereits.
+error.folder.has_content=Dieser Ordner enthält noch Objekte und kann nicht gelöscht werden.
+error.protected_relations=Das Objekt ist über geschützte Beziehungen mit anderen Objekten verbunden. 
