Enable custom administration links.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -863,3 +863,5 @@ changeTrigger.controller=Controller
 save=save
 cancel=cancel
 error.protected_relations=This object is related to another object via a protected relation.
+server.custom.admin=Custom administration
+server.no.custom.admin.controller=No additional custom administration features have been customized.
