Added message id for image alt attribute.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -865,3 +865,4 @@ cancel=cancel
 error.protected_relations=This object is related to another object via a protected relation.
 server.custom.admin=Custom administration
 server.no.custom.admin.controller=No additional custom administration features have been customized.
+status.ok=Image: green V for positive status message.
