Added missing messageId

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -866,3 +866,4 @@ error.protected_relations=This object is related to another object via a protect
 server.custom.admin=Custom administration
 server.no.custom.admin.controller=No additional custom administration features have been customized.
 status.ok=Image: green V for positive status message.
+indexGroup.items.label=Index Items
