MessageIds & Layout for MetasetTypes improved.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -867,3 +867,12 @@ server.custom.admin=Custom administration
 server.no.custom.admin.controller=No additional custom administration features have been customized.
 status.ok=Image: green V for positive status message.
 indexGroup.items.label=Index Items
+indexType.label=Index Type
+metasetType.create=Create MetasetType
+metasetType.config.label=Config
+metasetType.description.label=Description
+metasetType.name.label=Name
+default.link.skip.label=Skip to content
+metasetType.label=Metaset Type
+metasetType.list=List MetasetTypes
+metasetType.show.label=Metaset Type ''{0}''
