Fixed LifecycleLogController, added messageIds.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -876,3 +876,22 @@ default.link.skip.label=Skip to content
 metasetType.label=Metaset Type
 metasetType.list=List MetasetTypes
 metasetType.show.label=Metaset Type ''{0}''
+lifecycle.log.title=Lifecycle change logs
+lifecycle.log.none=No lifecycle log entries were found.
+log.submit.filter=filter entries
+paginate.itemCount=# of Items: {0}
+log.filter=Filter
+paginate.max=Maximum number of entries per page
+paginate.page=Page
+log.object.id=Object id
+log.folder.path=Folder path
+log.osd.name=Name
+log.username=Username
+log.user.id=User id
+log.lifecycle=Lifecycle
+log.old.state.name=old state
+log.old.state.id=old state id
+log.new.state.name=new state
+log.new.state.id=new state id
+log.created=Timestamp
+
