New: copy & paste of folders and objects
 Added permission checks to delete folder/objects.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -895,3 +895,32 @@ log.new.state.name=new state
 log.new.state.id=new state id
 log.created=Timestamp
 
+#osd.move.here=Move here
+#osd.copy.here=Copy here
+osd.target.versions=affected versions
+osd.copy.ok=Copy of object #{0} created.
+osd.copy.fail=Copy of object #{0} failed - {1}.
+osd.move.unnecessary=Object was already in place.
+osd.move.fail=Could not move {0} - {1}.
+folder.copy.ok=Copy of folder {0} created.
+folder.copy.fail=Copy of folder {0} failed - {1}.
+folder.move.unnecessary=Folder was already in place.
+folder.move.fail=Could not move folder {0} - {1}.
+
+versionType.head=Newest version in trunk
+versionType.branches=Newest versions in branches
+versionType.all=All versions
+versionType.selected=Only the selected objects
+osd.delete.branches.fail=Failed to delete branches of {0} - {1}.
+osd.delete.head.fail=Failed to delete main version of {0} - {1}.
+error.no.move.into.self=You cannot move a folder into one of its subfolders.
+error.no.copy.into.self=You cannot copy a folder into one of its subfolders.
+osd.move.ok=Move object {0}: ok.
+folder.move.ok=Move folder {0}: ok.
+error.source.is.target=The source and target of this operation are identical.
+error.delete.denied=You may not delete this object.
+osd.move.forbidden=You are not allowed to move this object.
+osd.move.into=Move into {0}
+osd.copy.into=Copy into {0}
+osd.move.into.unknown=move to ?
+osd.copy.into.unknown=copy to ?
