removed brackets from osd.create.version messageId.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -82,7 +82,7 @@ error.missing.objectType=Please specify a valid object type.
 error.missing.name=Please specify a name for this object.
 create.osd.head=Create an object in folder ''{0}''
 folder.index=Browse Repository
-osd.create.version=[version]
+osd.create.version=version
 osd.setContent.head=Set content on object #{0} - ''{1}''
 error.missing.content=Error: the server did not receive any content from you.
 osd.setContent.link=upload content
@@ -924,3 +924,5 @@ osd.move.into=Move into {0}
 osd.copy.into=Copy into {0}
 osd.move.into.unknown=move to ?
 osd.copy.into.unknown=copy to ?
+osd.preview=Preview of ${0}
+osd.preview.th=Preview
