Add application default messageId for page headline.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -926,3 +926,4 @@ osd.move.into.unknown=move to ?
 osd.copy.into.unknown=copy to ?
 osd.preview=Preview of ${0}
 osd.preview.th=Preview
+cinnamon.cms=Cinnamon ECMS
